[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes_and_scripts/Obstacles/Obstacle.gd" type="Script" id=1]

[node name="Obstacle" type="StaticBody2D"]
collision_layer = 512
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurt_box" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_box"]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -42.5888
margin_top = -40.5733
margin_right = 42.4112
margin_bottom = -26.5733
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Hurt_box" to="." method="_on_Hurt_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
